fix(thumbnail): checkerboard high contrast and border color refactor
- Allow checkerboard pattern to show in high contrast mode.
- Refactor a little around the border color token, to facilitate it
  being changed by a change in custom property value in high contrast
  mode. The border color rgb and opacity are no longer separate custom
  properties and mods, as they only need to be one. They are temporaily
  separate because of the TODO item.
- High contrast is-selected and is-focused value overrides did not need
  to be within an additional selector as they already have precendence
  when set within .spectrum-Thumbnail

--- a/components/thumbnail/index.css
+++ b/components/thumbnail/index.css
@@ -15,8 +15,8 @@ governing permissions and limitations under the License.
 
   --spectrum-thumbnail-border-radius: var(--spectrum-corner-radius-75);
   --spectrum-thumbnail-border-width: var(--spectrum-border-width-100);
-  --spectrum-thumbnail-border-color-rgb: var(--spectrum-gray-800-rgb); /* TODO: using nested value for rgba() replace with --spectrum-thumbnail-border-color */
-  --spectrum-thumbnail-border-color-opacity: var(--spectrum-thumbnail-border-opacity);
+  /* @todo Refactor with --spectrum-thumbnail-border-color once gray rgb token is no longer necessary to workaround nested rgb color token value using rgba(). */
+  --spectrum-thumbnail-border-color-rgba: rgba(var(--spectrum-gray-800-rgb), var(--spectrum-thumbnail-border-color-opacity));
 
   --spectrum-thumbnail-layer-border-width-inner: var(--spectrum-border-width-400);
   --spectrum-thumbnail-layer-border-color-inner: var(--spectrum-white);
@@ -34,7 +34,7 @@ governing permissions and limitations under the License.
 
   --spectrum-thumbnail-checkerboard-size: var(--spectrum-opacity-checkerboard-square-size);
   --spectrum-thumbnail-checkerboard-dark-color: var(--spectrum-opacity-checkerboard-square-dark);
-  --spectrum-thumbnail-checkerboard-light-color: var(--spectrum-opacity-checkerboard-square-light)
+  --spectrum-thumbnail-checkerboard-light-color: var(--spectrum-opacity-checkerboard-square-light);
 }
 
 .spectrum-Thumbnail--size50 {
@@ -106,7 +106,7 @@ governing permissions and limitations under the License.
     inline-size: 100%;
     block-size: 100%;
     border-radius: var(--mod-thumbnail-border-radius, var(--spectrum-thumbnail-border-radius));
-    box-shadow: inset 0 0 0 var(--mod-thumbnail-border-width, var(--spectrum-thumbnail-border-width))  rgba(var(--mod-thumbnail-border-color-rgb, var(--spectrum-thumbnail-border-color-rgb)),  var(--mod-thumbnail-border-color-opacity, var(--spectrum-thumbnail-border-color-opacity)));
+    box-shadow: inset 0 0 0 var(--mod-thumbnail-border-width, var(--spectrum-thumbnail-border-width)) var(--highcontrast-thumbnail-border-color, var(--mod-thumbnail-border-color, var(--spectrum-thumbnail-border-color-rgba)));
   }
 
   &.is-disabled {
@@ -214,20 +214,13 @@ governing permissions and limitations under the License.
 /* Windows High Contrast Mode */
 @media (forced-colors: active) {
   .spectrum-Thumbnail {
+    /* Allow checkerboard pattern to be visible. */
+    forced-color-adjust: none;
+
+    --highcontrast-thumbnail-border-color-selected: SelectedItem;
+    --highcontrast-thumbnail-focus-indicator-color: Highlight;
+    --highcontrast-thumbnail-border-color: CanvasText;
     background-color: Canvas;
-
-    &.is-selected {
-      --highcontrast-thumbnail-border-color-selected: SelectedItem;
-    }
-
-    &.is-focused {
-      --highcontrast-thumbnail-focus-indicator-color: Highlight;
-    }
-
-    &::before {
-      /* Replacement for box-shadow. */
-      outline: CanvasText solid var(--mod-thumbnail-border-width, var(--spectrum-thumbnail-border-width));
-      outline-offset: calc(-1 * var(--mod-thumbnail-border-width, var(--spectrum-thumbnail-border-width)));
-    }
+    color: CanvasText;
   }
 }
